deploy/bases/app/message-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-consumer
  labels:
    app: shopware
    component: async
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopware
      component: async
  template:
    metadata:
      labels:
        app: shopware
        component: async
    spec:
      securityContext:
        fsGroup: 33
      containers:
        - name: message-consumer
          image: kiweeteam/franken-shopware
          args:
            - php-cli
            - bin/ci
            - messenger:consume
            - --memory-limit=512M
            - -vv
            - async
            - low_priority
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          volumeMounts:
            - mountPath: /tmp
              name: tmpdir
          securityContext:
            runAsUser: 33
            runAsGroup: 33
            runAsNonRoot: true
            readOnlyRootFilesystem: true
      restartPolicy: Always
      volumes:
        - name: tmpdir
          emptyDir:
            sizeLimit: 1Gi
