deploy/bases/app/app-server-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-server-dev
  labels:
    app: shopware-dev
    component: web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http-shopware
  selector:
    app: shopware-dev
    component: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-server-dev
  labels:
    app: shopware-dev
    component: web
spec:
  selector:
    matchLabels:
      app: shopware-dev
      component: web
  replicas: 1
  template:
    metadata:
      labels:
        app: shopware-dev
        component: web
    spec:
      securityContext:
        fsGroup: 33
      containers:
        - name: app-server-dev
          args:
            - php-server
            - -l
            - 0.0.0.0:8000
            - -a
            - -v
            - --no-compress
          image: kiweeteam/franken-shopware-dev
          ports:
            - name: http-shopware
              containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          securityContext:
            runAsUser: 33
            runAsGroup: 33
