deploy/bases/app/app-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-server
  labels:
    app: shopware
    component: web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http-shopware
  selector:
    app: shopware
    component: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-server
  labels:
    app: shopware
    component: web
spec:
  selector:
    matchLabels:
      app: shopware
      component: web
  replicas: 2
  template:
    metadata:
      labels:
        app: shopware
        component: web
    spec:
      securityContext:
        fsGroup: 33
      containers:
        - name: app-server
          args:
            - php-server
            - -l
            - 0.0.0.0:8000
            - -a
            - -v
            - --no-compress
          image: kiweeteam/franken-shopware
          ports:
            - name: http-shopware
              containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          volumeMounts:
            - mountPath: /tmp
              name: tmpdir
            - mountPath: /var/www
              name: homedir
          securityContext:
            runAsUser: 33
            runAsGroup: 33
            runAsNonRoot: true
            readOnlyRootFilesystem: true
      restartPolicy: Always
      volumes:
        - name: tmpdir
          emptyDir:
            sizeLimit: 1Gi
        - name: homedir
          emptyDir:
            sizeLimit: 16Mi
